:bug: Change scrollbars to auto
Fixes #16

--- a/styles/keybinding-resolver.less
+++ b/styles/keybinding-resolver.less
@@ -3,7 +3,7 @@
 
 .key-binding-resolver {
   -webkit-flex: 0.25;
-  overflow: scroll;
+  overflow: auto;
 
   .keystroke {
     margin-right: 1em;
